<resources>
    <string name="app_name">MajorProjectMK2</string>

    <string name="buttonItineraryMain">Itinerary Menu</string>

    <!-- New Search -->
    <string name="title_activity_search_new">SearchNew</string>
    <string name="buttonSearchNew">Search Planets</string>
    <string name="hintSearchFirst">Enter First Date</string>
    <string name="hintSearchSecond">Enter Second Date</string>
    <string name="buttonSearch">Search</string>

    <string name="buttonLeaveDate">Enter Leave Date</string>
    <string name="buttonArrivalDate">Enter Arrival Date</string>

    <!-- Create new Itinerary -->
    <string name="hint_itinerary">Enter Itinerary Name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Itinerary not saved because entry is empty.</string>

    <!-- Delete all Itineraries -->
    <string name="buttonDeleteAllItineraries">Delete All Itineraries</string>

    <!-- Recycler View item -->
    <string name="meters">Meters</string>
    <string name="parsecs">Parsecs</string>
</resources>
